@@ -20,7 +20,7 @@ class Customer extends TActiveRecord
 
 	public $Orders=array();
 
-	protected static $RELATIONS = array
+	public static $RELATIONS = array
 	(
 		'Orders' => array(self::HAS_MANY, 'Order'),
 	);
