@@ -21,7 +21,7 @@ class Supplier extends TActiveRecord
 
 	public $Products=array();
 
-	protected static $RELATIONS=array
+	public static $RELATIONS=array
 	(
 		'Products' => array(self::HAS_MANY, 'Product')
 	);
