@@ -627,7 +627,7 @@ class TeamRecord extends TActiveRecord
     public $players=array();
 
     //define the $player member having has many relationship with PlayerRecord
-    protected static $RELATIONS=array
+    public static $RELATIONS=array
     (
         'players' => array(self::HAS_MANY, 'PlayerRecord'),
     );
@@ -710,7 +710,7 @@ class PlayerRecord extends TActiveRecord
     public $skills=array();
     public $profile;
 
-    protected static $RELATIONS=array
+    public static $RELATIONS=array
     (
         'team' => array(self::BELONGS_TO, 'TeamRecord'),
         'skills' => array(self::HAS_MANY, 'SkillRecord', 'Player_Skills'),
@@ -767,7 +767,7 @@ class ProfileRecord extends TActiveRecord
 
     public $player;
 
-    protected static $RELATIONS=array
+    public static $RELATIONS=array
     (
         'player' => array(self::BELONGS_TO, 'PlayerRecord'),
     );
@@ -813,7 +813,7 @@ class Category extends TActiveRecord
     public $parent_category;
     public $child_categories=array();
 
-    protected static $RELATIONS=array
+    public static $RELATIONS=array
     (
         'parent_category' => array(self::BELONGS_TO, 'Category'),
         'child_categories' => array(self::HAS_MANY, 'Category'),
@@ -867,7 +867,7 @@ class SkillRecord extends TActiveRecord
 
     public $players=array();
 
-    protected static $RELATIONS=array
+    public static $RELATIONS=array
     (
         'players' => array(self::HAS_MANY, 'PlayerRecord', 'Player_Skills'),
     );
@@ -949,7 +949,7 @@ class Item extends TActiveRecord
     public $related_item_id;
     public $related_items=array();
 
-    protected static $RELATIONS=array
+    public static $RELATIONS=array
     (
         'related_items' => array(self::HAS_MANY,
             'Item', 'related_items.related_item_id'),
