@@ -28,6 +28,7 @@ ENH: Added prompt text support to TDropDownList and TListBox (Qiang)
 CHG: Ticket#685 - Slashes and backslashes mixup in PradoBase (Qiang)
 CHG: Ticket#705 - TImage will not set border style by default (Qiang)
 CHG: GeSHi is replaced with Text_Highlighter (Christophe)
+CHG: Changed the way to declare relationships in Active Record (Qiang)
 CHG: Validators will not validate disabled controls (Qiang)
 NEW: Ticket#676 - Added primilary Oracle support (Christophe)
 NEW: Ticket#680 - Added TCacheHttpSession (Carl, Qiang)
